--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv-webpack": "^1.8.0",
     "dotenv-safe": "^8.1.0",
     "dotenv-cli": "^3.1.0",
+    "webhook-discord": "^3.7.7",
     "approximate-number": "^2.0.0"
   }
 }
